developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Director__c/OJSERLIB__VEDA_Current_Director__c.object-meta.xml
<CustomObject>
    <label>VEDA Current Director</label>
    <nameField>
        <label>VEDA Current Director Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VEDA Current Directors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>