developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Director__c/fields/OJSERLIB__Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Appointment_Date__c</fullName>
    <label>Appointment Date</label>
    <type>Date</type>
</CustomField>