developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Director__c/fields/OJSERLIB__Birth_Localion__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Birth_Localion__c</fullName>
    <label>Birth Localion</label>
    <length>125</length>
    <type>Text</type>
</CustomField>