developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Director__c/fields/OJSERLIB__Birth_State__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Birth_State__c</fullName>
    <label>Birth State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>