developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Director__c/fields/OJSERLIB__Birthdate__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Birthdate__c</fullName>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>