developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Director__c/fields/OJSERLIB__Cease_date__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Cease_date__c</fullName>
    <label>Cease_date</label>
    <type>Date</type>
</CustomField>