developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Director__c/fields/OJSERLIB__CourtDetails_application_number__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__CourtDetails_application_number__c</fullName>
    <label>CourtDetails_application_number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>