developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Director__c/fields/OJSERLIB__CourtDetails_state__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__CourtDetails_state__c</fullName>
    <label>CourtDetails_state</label>
    <length>255</length>
    <type>Text</type>
</CustomField>