developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Director__c/fields/OJSERLIB__FirstName__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__FirstName__c</fullName>
    <label>FirstName</label>
    <length>125</length>
    <type>Text</type>
</CustomField>