developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Director__c/fields/OJSERLIB__IsCurrent_Director__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsCurrent_Director__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCurrent Director</label>
    <type>Checkbox</type>
</CustomField>