developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Director__c/fields/OJSERLIB__IsResidencyOverseas__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsResidencyOverseas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsResidencyOverseas</label>
    <type>Checkbox</type>
</CustomField>