developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Director__c/fields/OJSERLIB__Last_known_date__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Last_known_date__c</fullName>
    <label>Last known date</label>
    <type>Date</type>
</CustomField>