developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Director__c/fields/OJSERLIB__LastName__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__LastName__c</fullName>
    <label>LastName</label>
    <length>125</length>
    <type>Text</type>
</CustomField>