developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Director__c/fields/OJSERLIB__Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Mailing_City__c</fullName>
    <label>Mailing City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>