developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Director__c/fields/OJSERLIB__Mailing_PostCode__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Mailing_PostCode__c</fullName>
    <label>Mailing PostCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>