developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Director__c/fields/OJSERLIB__Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Mailing_State__c</fullName>
    <label>Mailing State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>