developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Director__c/fields/OJSERLIB__Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Mailing_Street__c</fullName>
    <label>Mailing Street</label>
    <length>225</length>
    <type>Text</type>
</CustomField>