developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Current_Director__c/fields/OJSERLIB__VEDA_File_Number__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__VEDA_File_Number__c</fullName>
    <label>VEDA File Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>